# robowski-maps

./: .gitignore  LICENSE  MANIFEST.in  README.md  environment.yml  environment_linux.yml  environment_without_mayavi.yml  requirements.txt  setup.cfg
geometric_algorithms/: dataset_decimation.py  hypana.py  topoenv.yml
misc-scripts/: auto_mark_outliers.py  check_timings_of_a_run.py  combine_plots_into_grid.py  generate_conditions_list.py  hntz_discovery_timeline.py  manually_mark_outliers.py  misc-plots.py  mock_product_concentrations.py  multicomp_C_to_V.py  multicomp_generate_C.py  organize_run_results.py  outlier_analysis.py  request_outliers.py  temp-sketches.py  ugi_ph.pkl  ugi_proportions.pkl  ugi_waters.pkl  wet_acetonitrile.py
notebooks/: claisen_waishing_tutorial.py  spectral_unmixing_tutorial.ipynb
robowski/: settings.py
summary_of_reaction_yield_data/: README.md  convert_3d_dataset_to_hyvu_format.py  convert_3d_dataset_to_yipman_format.py  convert_4d_dataset_to_hyvu_format.py  convert_4d_dataset_to_yipman_format.py  convert_dataset_to_3dviewer_yipman_format.py
tests/: README.md  test_claisen_waishing.py  test_organize_run_results.py  test_process_wellplate_spectra.py  test_smoothness_v2.py
uv-vis-absorption-spectroscopy/: absorbance_errorbar_model.py  bkg-pca.py  calibrator.py  process_wellplate_spectra.py  reproducibility_analysis.py  reproducibility_analysis_2.py
visualize-results/: adaptive_sampling.py  animated-viewer-interp-2.py  animated-viewer-interp.py  animated-viewer-mock.py  animated-viewer-singlecube.py  animated-viewer.py  (+4 more)
(+1096 files in other folders)
