[metadata]
name = robowski
author = Yaroslav I. Sobolev, Yankai Jia
author_email = yaroslav.sobolev@gmail.com
version = 1.0
description = Data analysis code for research article 'Robot-assisted reconstruction of reaction hyperspaces and complex reaction networks they contain'
long_description = file: README.md
long_description_content_type = text/md
license = MIT
home_page = https://github.com/yaroslavsobolev/robowski-maps

[options]
packages = find:
include_package_data = true
install_requires =
    setuptools
    importlib_resources


[bdist_wheel]
universal = 1